<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndTwitter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tweetlist">TweetList</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="save_login_data">Save login data</string>
    <string name="right_arrow">-></string>
    <!-- 
    <string name="twitter_oauth_consumer_key">rLgj2ZPStx0cFoFv5vM3A</string>
    <string name="twitter_oauth_consumer_secret">1SZJt4hzWqggIzG6CD7is3wHE5vmrrxg2ijDJMpeQ40</string>
    -->
    <string name="twitter_oauth_consumer_key">F7s1WbLuCCuRupvmntYrFg</string>
    <string name="twitter_oauth_consumer_secret">PWPIpLzWHGGI24hsVeLwiThLa4OkpxzAyHcGMhBjVs</string>
    <string name="twitter_callback_url">twitter-oauth://callback</string>
    <string name="folowers">Folowers</string>
    <string name="folowings">Folowings</string>
    <string name="new_tweet">New Tweet</string>
    <string name="profile">Profile</string>
    <string name="tweets">Tweets</string>
    <string name="timeline">Timeline</string>
    <string name="favourites">Favourites</string>
    <string name="mentions">Mentions</string>
    <string name="tweet">Tweet</string>
    <string name="user_profile">User Profile</string>
    <string name="pin_to_slidebar">Pin to slidebar</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="search_by_tweet_text">Search by tweet text</string>
    <string name="search_by_username">Search by username</string>
    <string name="reload_form">Refresh</string>
    <string name="blockers">Blockers</string>
    <string name="not_logged_in">You\'re not logged in. Please log in.</string>
    <string name="view_profile">View Profile</string>
    <string name="folow">Folow</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="unfolow">Unfolow</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="you_must_log_in_first">You must log in first</string>
    <string name="enter_tweet_text">Enter tweet text</string>
    <string name="unknown_host">Unable to resolve host "api.twitter.com"</string>
    <string name="appinfo">\nAndTwitter Version 1.0 \nDeveloped by Sergey Surkov\nIf you want to donate here is my WebMoney purses: Z1111, R1111, U1111\nAll rights reserved.\n</string>
    <string name="visit_app_page">Visit app page on Play Store</string>
    <string name="about">About</string>
</resources>