<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/userProfile_userAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/userProfile_screenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userProfile_userName"
            android:layout_toRightOf="@+id/userProfile_userAvatar"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userProfile_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/userProfile_userAvatar"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <TextView
        android:id="@+id/userProfile_createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/userProfile_description"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userProfile_createdAt"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/userProfile_folowingsBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folowings" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/userProfile_folowersBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folowers" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/userProfile_tweetsBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tweets" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:attr/dividerVertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <Button
                    android:id="@+id/folow_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/folow" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="?android:attr/dividerVertical" />

                <Button
                    android:id="@+id/block_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/block" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/userProfile_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout1"
        android:layout_alignParentRight="true"
        android:layout_weight="0.35"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/userinfo_folowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/userview_follow" />

        <ImageView
            android:id="@+id/userinfo_blocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/userview_block" />
    </LinearLayout>

</RelativeLayout>